<resources>
    <string name="app_name">무물</string>
    <string name="server_client_id">SERVER_CLIENT_ID</string>
    <string name="feed">피드</string>
    <string name="my_page">마이페이지</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="hint_email">이메일을 입력해주세요</string>
    <string name="hint_password">비밀번호를 입력해주세요</string>
    <string name="hint_nickname">닉네임을 입력해주세요</string>
    <string name="next_button">계속하기</string>
    <string name="save_button">저장하기</string>
    <string name="duplicate_check">중복확인</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="title">제목</string>
    <string name="delete">삭제</string>
    <string name="recall">불러오기</string>
    <string name="change">변경하기</string>
    <string name="back">뒤로가기</string>
    <string name="start">시작하기</string>
    <string name="dialog_title">다이얼로그 타이틀입니다.</string>
    <string name="dialog_description">다이어로그 내용입니다</string>
    <string name="toast_description">Toast Message</string>
    <string name="login">로그인</string>
    <string name="login_google">구글 계정으로 로그인</string>
    <string name="login_email">이메일 계정으로 로그인</string>
    <string name="signup_guide_message">무물이 처음이신가요? <u>회원가입</u></string>
    <string name="login_fail_dialog_title">로그인 실패!</string>
    <string name="login_fail_dialog_description">아이디 혹은 비밀번호가 일치하지 않아요!</string>
    <string name="reset_password_button">비밀번호를 잊어버리셨나요? <b><font color="#FF227C"><u>비밀번호 재설정</u></font></b></string>
    <string name="reset_password_message">비밀번호 재설정을 위해\n재설정 메일을 이메일로 보내드릴게요.</string>
    <string name="reset_password">비밀번호 초기화</string>
    <string name="reset_password_dialog_title">전송 완료!</string>
    <string name="reset_password_dialog_description">재설정 메일이 발송되었어요.\n이메일을 확인해주세요 :-)</string>
    <string name="signup">회원가입</string>
    <string name="fail_message_email_signup_id_format">잉? 이메일 형식을 확인해주세요</string>
    <string name="fail_message_email_signup_id_duplicate">어라? 이미 가입된 이메일이에요!</string>
    <string name="success_message_email_signup_id">멋진 이메일이네요!</string>
    <string name="message_email_signup_id">이메일은 로그인과\n비밀번호 분실 시 사용될 거에요!</string>
    <string name="hint_password_format">비밀번호를 입력해주세요</string>
    <string name="hint_password_check">비밀번호 확인할게요 :)</string>
    <string name="fail_message_email_signup_password_format">조건에 맞게 비밀번호를 입력해주세요!</string>
    <string name="fail_message_email_signup_password_format_length">8자리 이상 비밀번호를 입력해주세요!</string>
    <string name="fail_message_email_signup_password_format_character">$, @, !, %, *, #, ?, &amp;외에 특수문자를 추가할 수 없어요!</string>
    <string name="fail_message_email_signup_password_empty">앗! 위에 비밀번호를 먼저 입력해주세요</string>
    <string name="fail_message_email_signup_password_check">헉! 비밀번호가 다른데요? 확인해 주시겠어요?</string>
    <string name="success_message_email_signup_password">좋은데요!</string>
    <string name="success_message_email_signup_password_check">완벽해요! 다음으로 넘어갈까요?</string>
    <string name="message_email_signup_password_format">영어 및 숫자를 포함하여\n8자리 이상으로 입력해주세요!</string>
    <string name="fail_message_email_signup_nickname_format">8글자를 넘지않게 적어주세요</string>
    <string name="fail_message_email_signup_nickname_duplicate">어라? 이미 있는 아이디네요?</string>
    <string name="success_message_email_signup_nickname">세상에..너무 멋진 닉네임이에요!</string>
    <string name="message_email_signup_information_tos">시작하면 <b><u>서비스 이용약관, </u></b></string>
    <string name="message_email_signup_information_privacy"><b><u>개인 정보 보호 약관</u></b>에 동의하게 됩니다.</string>
    <string name="feed_empty">더이상 게시물이 없어요 ㅠ.ㅠ\n당신의 고민을 올려주세요!</string>
    <string name="feed_list">무물리스트</string>
    <string name="feed_category_new">최신순</string>
    <string name="feed_category_popular">인기순</string>
    <string name="feed_category_coming_end">마감임박순</string>
    <string name="feed_category_end">최근마감순</string>
    <string name="feed_request_popular">rank-count</string>
    <string name="feed_request_new">created-date</string>
    <string name="feed_request_coming_end">almost-done</string>
    <string name="feed_request_end">already-done</string>
    <string name="feed_item_title1">⭐ 무물의 추천글</string>
    <string name="feed_item_title2">🔥 불타고 있는 글</string>
    <string name="feed_item_title3">❤ 사랑듬뿍받은 글</string>
    <string name="feed_item_title4">⚔ 막상막하 투표글</string>
    <string name="feed_item_title5">😆 최고의 반응글</string>
    <string name="feed_item_not_end">진행중</string>
    <string name="feed_item_end">끝</string>
    <string name="feed_item_nickname_time">%s · %s</string>
    <string name="feed_item_time">%d시간 남음</string>
    <string name="feed_item_agree">찬성</string>
    <string name="feed_item_disagree">반대</string>
    <string name="feed_item_percent">%d%%</string>
    <string name="my_page_profile_update">프로필변경</string>
    <string name="my_page_my_content">나의 글</string>
    <string name="my_page_my_write">내가쓴</string>
    <string name="my_page_my_participate">투표참여</string>
    <string name="my_page_my_write_empty">아직 게시물이 없어요 ㅠ.ㅠ\n당신의 고민을 올려주세요!</string>
    <string name="my_page_my_participate_empty">아직 참여한 투표가 없어요 ㅇ.ㅇ\n투표를 참여해주세요!</string>
    <string name="my_page_request_written">written</string>
    <string name="my_page_request_voted">voted</string>
    <string name="notification_title">알림</string>
    <string name="notification_empty_title">아직 알림이 없어요</string>
    <string name="notification_empty_content">전해드릴 알림이 생기면\n곧바로 알려드릴게요!</string>
    <string name="profile_change_nickname">프로필 변경</string>
    <string name="message_profile_change_nickname">변경을 원하신다면, 중복확인을 해주세요</string>
    <string name="success_message_profile_change_nickname">닉네임 중복확인을 완료했어요 :)</string>
    <string name="profile_change_nickname_success_dialog_title">중복확인 성공</string>
    <string name="profile_change_nickname_success_dialog_description">사용할 수 있는 닉네임이에요!</string>
    <string name="profile_change_nickname_fail_dialog_title">중복확인 실패</string>
    <string name="profile_change_nickname_fail_dialog_description">이런...이미 있는 닉네임이에요\n다른 닉네임으로 시도해주세요</string>
    <string name="profile_change_all_success_dialog_title">프로필 변경 성공!</string>
    <string name="profile_change_all_success_dialog_description">보다 멋진 프로필로 변경되었어요!\n이제 다시 활동을 시작해볼까요?</string>
    <string name="profile_change_navigate_changePassword_fail_toast">소셜 계정은 비밀번호 변경이 불가합니다</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="hint_old_password">현재 비밀번호를 입력해주세요</string>
    <string name="hint_new_password">새롭게 설정할 비밀번호를 입력해주세요</string>
    <string name="hint_new_password_check">비밀번호 확인할게요 :)</string>
    <string name="change_password_fail_old_password">비밀번호가 올바르지 않아요!</string>
    <string name="change_password_fail_new_password_format">영어및 숫자를 포함하여 8자리를 넘겨주세요!</string>
    <string name="change_password_fail_new_password_same">현재 비밀번호와 똑같아요</string>
    <string name="change_password_fail_new_password_check">헉! 비밀번호가 다른데요? 확인해 주시겠어요?</string>
    <string name="change_password_fail_new_password_empty">앗! 위에 비밀번호를 먼저 입력해주세요</string>
    <string name="change_password_success">비밀번호가 변경되었어요</string>
    <string name="vote_title">투표하기</string>
    <string name="vote_comments_count">%d개의 댓글</string>
    <string name="vote_agree">대찬성</string>
    <string name="vote_disagree">이건좀...</string>
    <string name="vote_complete">투표 완료!</string>
    <string name="vote_comment_hint">댓글을 남겨주세요.</string>
    <string name="vote_reply_hint">대댓글을 남겨주세요.</string>
    <string name="vote_delete_dialog">정말 삭제하시겠어요?\n삭제한 글은 되돌릴 수 없어요.</string>
    <string name="comment_post">게시</string>
    <string name="comment_length_warning">댓글을 500자까지만 입력할 수 있어요.</string>
    <string name="comment_title">반응 남기기</string>
    <string name="comment_reaction_yellow">올~~~</string>
    <string name="comment_reaction_red">!?!?!?</string>
    <string name="comment_reaction_green">ㅋㅋㅋ</string>
    <string name="comment_reaction_blue">ㅠㅠㅠ</string>
    <string name="comment_reaction_brown">.........</string>
    <string name="comment_time">%d%s</string>
    <string name="comment_time_now">방금 전</string>
    <string name="comment_time_minute_ago">분 전</string>
    <string name="comment_time_hour_ago">시간 전</string>
    <string name="comment_time_day_ago">일 전</string>
    <string name="comment_time_year_ago">년 전</string>
    <string name="comment_update">수정하기</string>
    <string name="comment_delete">삭제하기</string>
    <string name="comment_replay_count">+ 대댓글 %d개</string>
    <string name="comment_deleted_content">삭제된 댓글입니다.</string>
    <string name="comment_delete_dialog">정말 삭제하시겠습니까?</string>
    <string name="write">글쓰기</string>
    <string name="write_message_title">👀 당신의 고민은 무엇인가요?</string>
    <string name="hint_wirte_description">내용을 작성해주세요</string>
    <string name="write_save_fail_format_dialog_title">올바르지 않은 형식</string>
    <string name="write_save_fail_format_dialog_description">jpg, jpeg, png, webp 형식의 이미지 파일만 업로드 가능합니다.</string>
    <string name="write_save_fail_server_error_dialog_title">등록 실패</string>
    <string name="write_save_fail_server_error_dialog_description">서버 상의 오류가 발생했습니다.\n다시 시도해주세요.</string>
    <string name="write_save_fail_toast_length_exceed_title">제목은 20자까지만 입력할 수 있어요.</string>
    <string name="write_save_fail_toast_length_exceed_content">내용은 1000자까지만 입력할 수 있어요.</string>
    <string name="write_temp_save">임시저장</string>
    <string name="write_temp_save_fail_empty_message">내용 작성 후 저장해주세요.</string>
    <string name="write_temp_save_success_meesage">작성 중인 글이 임시 저장되었어요.</string>
    <string name="write_add_photo">이미지 추가</string>
    <string name="write_temp_archive">임시 보관함</string>
    <string name="write_temp_list_delete_dialog_description">선택한 임시저장 글을 삭제할까요?\n삭제한 글은 되돌릴 수 없어요.</string>
    <string name="write_temp_list_delete_toast_description">선택한 임시 저장글이 삭제되었어요.</string>
    <string name="write_temp_list_delete_empty_dialog_title">선택없음</string>
    <string name="write_temp_list_delete_empty_dialog_description">선택한 임시저장 글이 없어요.</string>
    <string name="write_temp_post">저장된 글</string>
    <string name="write_temp_post_recall_dialog_description">작성 중이던 글은 저장되지 않습니다. 선택한 글을 불러올까요?</string>
    <string name="on_boarding_skip">SKIP</string>
    <string name="on_boarding_start">지금 시작하기</string>
    <string name="on_boarding_first_title">물어보고 싶은것들\n무물에서 물어봐!</string>
    <string name="on_boarding_first_content">나의 고민이나 의견을 들어보고 싶은\n모든것들을 물어봐요!</string>
    <string name="on_boarding_second_title">고민에 대한\n사람들의 찬반투표</string>
    <string name="on_boarding_second_content">고민에 대한 찬반투표를 남겨보고\n투표현황을 확인할 수 있어요</string>
    <string name="on_boarding_third_title">주제에 대한\n실시간 댓글토론</string>
    <string name="on_boarding_third_content">주제에 대한 나의 생각을\n댓글로 남겨 의견을 나누어보고</string>
    <string name="on_boarding_fourth_title">이모지를 통해\n반응 남기기</string>
    <string name="on_boarding_fourth_content">다양한 이모지를 통해서\n댓글에 대한 나의 반응을 남겨봐요!</string>
    <string name="setting">설정</string>
    <string name="setting_notification">알림설정</string>
    <string name="setting_motion">모션설정</string>
    <string name="setting_information_use">이용정보</string>
    <string name="setting_information_notice">공지사항</string>
    <string name="setting_information_inquiry">문의하기</string>
    <string name="setting_information_application_version">앱 버전</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_delete_account">탈퇴하기</string>
    <string name="setting_delete_account_complete">탈퇴완료</string>
    <string name="setting_logout_dialog_description">로그아웃 시 임시 저장된 모든 게시글이 삭제됩니다. 정말 로그아웃 하시겠어요?</string>
    <string name="network_error_title">연결오류</string>
    <string name="network_error_content_title">연결에 실패했어요</string>
    <string name="network_error_contetn">앗! 현재 네트워크가 불안정해요\n네트워크 상태를 확인하고 다시 시도해주세요</string>
</resources>