<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileFragment">

    <include layout="@layout/activity_toolbar"
        android:id="@+id/toolbar_profile_board"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:id="@+id/tv_message_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_profile_board"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/nickname"
        android:textColor="@color/bluegray200_E1E3E8"
        />

    <FrameLayout
        android:id="@+id/frameLayout_profile_nickname_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_nickname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp">
        <EditText
            android:id="@+id/et_profile_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nickname"
            android:textColorHint="@color/bluegray600_626670"
            android:textColor="@color/bluegray200_E1E3E8"
            android:backgroundTint="@color/bluegray300_CBCFD6"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_duplicate_check_et_nickname"
            android:layout_width="77dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"
            android:text="@string/duplicate_check"
            android:textColor="@color/bluegray50_F9FAFC"
            android:background="@drawable/button_duplicate_check"
            android:visibility="invisible"
            android:enabled="false"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_message_change_check_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_profile_nickname_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:text="@string/message_profile_change_nickname"
        android:textColor="@color/moomool_pink_ff227c"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/tv_message_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_profile_nickname_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textColor="@color/bluegray200_E1E3E8"
        />
    <EditText
        android:id="@+id/et_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/bluegray600_626670"
        android:textColor="@color/bluegray200_E1E3E8"
        android:backgroundTint="@color/bluegray300_CBCFD6"
        />
    <TextView
        android:id="@+id/tv_message_change_check_email_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_profile_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:text="@string/fail_message_eamil_signup_id_format"
        android:textColor="@color/moomool_pink_ff227c"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/tv_message_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/et_profile_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textColor="@color/bluegray200_E1E3E8"
        />
    <EditText
        android:id="@+id/et_profile_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/bluegray600_626670"
        android:textColor="@color/bluegray200_E1E3E8"
        android:inputType="textPassword"
        android:text="* * * *"
        android:backgroundTint="@color/bluegray300_CBCFD6"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/save_button"
        android:textSize="16sp"
        android:textColor="@color/bluegray600_626670"
        android:background="@drawable/button_default_disable"
        android:enabled="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>