<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_message_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_title"
        android:textColor="@color/bluegray50_F9FAFC"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message_dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_description"
        android:textColor="@color/bluegray100_F0F2F5"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message_dialog_title" />

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/bluegray600_626670"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/cancel"
        android:textColor="@color/bluegray50_F9FAFC"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_dialog_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message_dialog_description" />

    <TextView
        android:id="@+id/tv_dialog_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/moomool_pink_ff227c"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/confirm"
        android:textColor="@color/bluegray50_F9FAFC"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dialog_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_message_dialog_description" />
</androidx.constraintlayout.widget.ConstraintLayout>