<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="appVersion"
            type="String" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.setting.SettingFragment">

    <include layout="@layout/activity_toolbar"
        android:id="@+id/toolbar_setting_board"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:id="@+id/tv_message_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting_board"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/setting"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/bluegray200_E1E3E8"
        />

    <Button
        android:id="@+id/btn_setting_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="20dp"
        android:text="@string/setting_notification"
        android:textSize="18dp"
        android:textColor="@color/bluegray300_CBCFD6"
        android:letterSpacing="0"
        android:drawableEnd="@drawable/ic_next"/>
    <Button
        android:id="@+id/btn_setting_motion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting_notification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="20dp"
        android:text="@string/setting_motion"
        android:textSize="18dp"
        android:textColor="@color/bluegray300_CBCFD6"
        android:letterSpacing="0"
        android:drawableEnd="@drawable/ic_next"/>

    <TextView
        android:id="@+id/tv_message_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting_motion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/setting_information_use"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/bluegray200_E1E3E8"
        />
    <Button
        android:id="@+id/btn_setting_information_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="20dp"
        android:text="@string/setting_information_notice"
        android:textSize="18dp"
        android:textColor="@color/bluegray300_CBCFD6"
        android:letterSpacing="0"
        android:drawableEnd="@drawable/ic_next"/>
    <Button
        android:id="@+id/btn_setting_information_inquiry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting_information_notice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="20dp"
        android:text="@string/setting_information_inquiry"
        android:textSize="18dp"
        android:textColor="@color/bluegray300_CBCFD6"
        android:letterSpacing="0"
        android:drawableEnd="@drawable/ic_next"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_information_application_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_setting_information_inquiry">

        <TextView
            android:id="@+id/tv_setting_information_application_version_current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingRight="20dp"
            android:text="@{appVersion}"
            android:textSize="18dp"
            android:textColor="@color/bluegray500_878C96"
            />
        <Button
            android:id="@+id/btn_setting_information_application_version_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingLeft="20dp"
            android:text="@string/setting_information_application_version"
            android:textSize="18dp"
            android:textColor="@color/bluegray300_CBCFD6"
            android:background="@android:color/transparent"
            android:enabled="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="42dp"
        >
        <TextView
            android:id="@+id/tv_setting_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/view_vertical_line"
            android:layout_marginRight="30dp"
            android:text="@string/setting_logout"
            android:textSize="12dp"
            android:textColor="@color/bluegray300_CBCFD6"
            />
        <View
            android:id="@+id/view_vertical_line"
            android:layout_width="1dp"
            android:layout_height="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/bluegray300_CBCFD6"
            />
        <TextView
            android:id="@+id/tv_setting_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/view_vertical_line"
            android:layout_marginLeft="30dp"
            android:text="@string/setting_delete_account"
            android:textSize="12dp"
            android:textColor="@color/bluegray300_CBCFD6"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>