<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.networkerror.NetworkErrorFragment">

    <TextView
        android:id="@+id/tv_network_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:text="@string/network_error_title"
        android:textColor="@color/bluegray50_F9FAFC"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_network_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:src="@drawable/ic_network_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_network_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_network_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="16dp"
        android:text="@string/network_error_content_title"
        android:textColor="@color/bluegray100_F0F2F5"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_network_error"
        app:layout_constraintStart_toStartOf="@id/img_network_error"
        app:layout_constraintTop_toBottomOf="@id/img_network_error" />

    <TextView
        android:id="@+id/tv_network_error_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/network_error_contetn"
        android:textColor="@color/bluegray300_CBCFD6"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@id/tv_network_error_title"
        app:layout_constraintStart_toStartOf="@id/tv_network_error_title"
        app:layout_constraintTop_toBottomOf="@id/tv_network_error_title" />
</androidx.constraintlayout.widget.ConstraintLayout>